<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/accountLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/accountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_colon"
        android:textSize="18sp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/accountText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:gravity="start" />

    <TextView
        android:id="@+id/roleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role_colon"
        android:textSize="18sp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/usernameText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:gravity="start" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_colon"
        android:textSize="18sp"
        android:paddingStart="16dp"
        android:layout_marginTop="12dp"
        android:labelFor="@id/phoneAccEditText"
        app:layout_constraintTop_toBottomOf="@id/roleText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phoneAccEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="number"
        android:digits="0123456789"
        android:imeOptions="actionDone"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/phoneLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/phoneLabel"
        app:layout_constraintBottom_toBottomOf="@id/phoneLabel" />

    <Button
        android:id="@+id/savePhoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_phone"
        app:layout_constraintTop_toBottomOf="@id/phoneLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/smsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:text="@string/sms_alerts"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/savePhoneButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out_button"
        app:layout_constraintTop_toBottomOf="@id/smsSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/manageUsersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_users"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/logoutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/sampleDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_sample_items"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/manageUsersButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
