<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/item_name"
            android:textSize="20sp"
            android:ellipsize="end"
            android:maxLines="1" />

        <ImageButton
            android:id="@+id/incrementButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/add_button"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/increment_quantity" />

        <TextView
            android:id="@+id/itemQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/qty_placeholder"
            android:textSize="20sp"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/decrementButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/subtract_button"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/decrement_quantity" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerInside"
            android:src="@drawable/delete_button"
            app:tint="@color/delete_button_color"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/item_delete" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
